// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonAddToList /> render Should ButtonAddToList render correctly, !isFavorite, !isPromo 1`] = `
<button
  className="btn btn--list movie-card__button"
  onClick={[Function]}
  type="button"
>
  <svg
    height="20"
    viewBox="0 0 19 20"
    width="19"
  >
    <use
      xlinkHref="#add"
    />
  </svg>
  <span>
    My list
  </span>
</button>
`;

exports[`<ButtonAddToList /> render Should ButtonAddToList render correctly, !isFavorite, isPromo 1`] = `
<button
  className="btn btn--list movie-card__button"
  onClick={[Function]}
  type="button"
>
  <svg
    height="20"
    viewBox="0 0 19 20"
    width="19"
  >
    <use
      xlinkHref="#add"
    />
  </svg>
  <span>
    My list
  </span>
</button>
`;

exports[`<ButtonAddToList /> render Should ButtonAddToList render correctly, isFavorite, !isPromo 1`] = `
<button
  className="btn btn--list movie-card__button"
  onClick={[Function]}
  type="button"
>
  <svg
    height="20"
    viewBox="0 0 19 20"
    width="19"
  >
    <use
      xlinkHref="#in-list"
    />
  </svg>
  <span>
    In list
  </span>
</button>
`;

exports[`<ButtonAddToList /> render Should ButtonAddToList render correctly, isFavorite, isPromo 1`] = `
<button
  className="btn btn--list movie-card__button"
  onClick={[Function]}
  type="button"
>
  <svg
    height="20"
    viewBox="0 0 19 20"
    width="19"
  >
    <use
      xlinkHref="#in-list"
    />
  </svg>
  <span>
    In list
  </span>
</button>
`;
